--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
     const tokenEl = $('#token');
 
     // ======= Ajustes por defecto (pon tus valores reales) =======
-    const DEFAULT_ENDPOINT = 'https://script.google.com/macros/s/TU_ID/exec'; // <-- REEMPLAZA
-    const DEFAULT_TOKEN    = 'TU_SECRET_TOKEN';                               // <-- REEMPLAZA
+    const DEFAULT_ENDPOINT = 'https://script.google.com/macros/s/AKfycbwNmtoZmSMM-8S27qr8E1jCh8wPHdI4UQLS8xl95OqUteQe4t1QvbCwmC9RZbwTanUt/exec'; // <-- REEMPLAZA
+    const DEFAULT_TOKEN    = 'MX-Compras-2025-84xG';                               
     // ============================================================
 
     function status(msg, type){
