--- a/index.html
+++ b/index.html
@@ -5,41 +5,115 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Registro de compras — Escaneo</title>
   <style>
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;line-height:1.4;margin:0;background:#f7f7f8;color:#111}
-    header{background:white;position:sticky;top:0;z-index:10;border-bottom:1px solid #e5e7eb}
-    header .wrap{max-width:900px;margin:0 auto;padding:12px 16px;display:flex;gap:12px;align-items:center;justify-content:space-between}
-    main{max-width:900px;margin:0 auto;padding:16px}
-    .card{background:white;border:1px solid #e5e7eb;border-radius:14px;padding:16px;margin-bottom:14px;box-shadow:0 1px 2px rgba(0,0,0,0.03)}
-    label{display:block;font-weight:600;margin:10px 0 6px}
-    input,button,select{font-size:16px;padding:10px;border-radius:10px;border:1px solid #d1d5db;width:100%}
-    button{cursor:pointer}
-    .row{display:grid;grid-template-columns:1fr 1fr;gap:12px}
-    #video{width:100%;max-height:360px;border-radius:12px;background:#000}
-    .muted{color:#6b7280;font-size:14px}
-    .ok{color:#0a7a0a}
-    .err{color:#b42318}
-    .status{font-weight:600}
-    .small{font-size:12px}
-    .mono{font-family:ui-monospace,SFMono-Regular,Consolas,Monaco,monospace}
-    .pill{background:#eef2ff;border:1px solid #c7d2fe;color:#3730a3;border-radius:999px;padding:2px 8px;font-size:12px}
+    :root{
+      --brand:#0b5fa5;      /* azul Valero aprox */
+      --brand-ink:#0a3560;
+      --accent:#f2c200;     /* amarillo Valero aprox */
+      --bg:#f6f7fb;
+      --ink:#0f172a;
+      --muted:#64748b;
+      --card:#ffffff;
+      --line:#e5e7eb;
+      --ok:#107c10;
+      --err:#b42318;
+      --radius:14px;
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;background:var(--bg);color:var(--ink);
+      font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+      line-height:1.4;
+    }
+
+    /* Header */
+    header{
+      position:sticky; top:0; z-index:10; background:var(--card);
+      border-bottom:1px solid var(--line);
+    }
+    .wrap{
+      max-width:960px; margin:0 auto; padding:12px 16px;
+      display:flex; align-items:center; justify-content:space-between; gap:12px;
+    }
+    .brand{
+      display:flex; align-items:center; gap:12px;
+    }
+    .brand img{
+      height:36px; width:auto; display:block; border-radius:6px;
+    }
+    .brand h1{
+      margin:0; font-size:18px; font-weight:700; letter-spacing:.2px;
+      color:var(--brand-ink);
+      display:flex; align-items:center; gap:8px;
+    }
+    .pill{
+      background:#eef2ff;border:1px solid #c7d2fe;color:#3730a3;
+      padding:3px 8px;border-radius:999px;font-size:12px;font-weight:600;
+    }
+    /* Container & cards */
+    main{max-width:960px; margin:16px auto; padding:0 16px}
+    .card{
+      background:var(--card); border:1px solid var(--line); border-radius:var(--radius);
+      box-shadow:0 1px 2px rgba(0,0,0,.04); padding:18px; margin-bottom:16px;
+    }
+    .card h3{margin:0 0 10px 0; font-size:18px}
+    label{display:block; font-weight:600; font-size:14px; margin:6px 0}
+    input,button{
+      width:100%; font-size:16px; padding:12px 14px; border-radius:12px;
+      border:1px solid #d1d5db; background:white; outline:none;
+    }
+    input:focus{border-color:var(--brand); box-shadow:0 0 0 3px rgba(11,95,165,.12)}
+    .btn{
+      display:inline-flex; align-items:center; justify-content:center; gap:8px;
+      cursor:pointer; user-select:none; font-weight:700;
+    }
+    .btn-primary{
+      background:var(--brand); color:white; border-color:var(--brand);
+    }
+    .btn-primary:active{transform:translateY(1px)}
+    .btn-ghost{
+      background:white; color:var(--brand-ink); border:1px solid var(--line);
+    }
+    .btn-icon{width:auto; padding:10px 14px}
+    .grid{display:grid; gap:14px}
+    /* 1 columna en móvil, 2 en pantallas medianas */
+    @media (min-width:720px){
+      .grid-2{grid-template-columns:1fr 1fr}
+    }
+
+    /* Video */
+    #video{
+      width:100%; aspect-ratio:16/9; background:#000; border-radius:12px;
+      object-fit:cover; display:block;
+    }
+    .muted{color:var(--muted); font-size:13px}
+    .status{margin-top:8px; font-weight:700}
+    .status.ok{color:var(--ok)} .status.err{color:var(--err)}
+
+    /* Settings panel */
+    #settings{display:none}
+    .footer-note{font-size:12px;color:var(--muted); text-align:center; padding:8px 0}
   </style>
 </head>
 <body>
   <header>
     <div class="wrap">
-      <div class="flex">
-        <strong>Registro de compras</strong>
-        <span id="secure" class="pill">HTTPS requerido para cámara</span>
+      <div class="brand">
+        <!-- Sube tu logo como logo-valero.png a la raíz del repo -->
+        <img src="logo-valero.png" alt="Logo" onerror="this.style.display='none'">
+        <h1>Registro de compras <span id="secure" class="pill">HTTPS requerido</span></h1>
       </div>
-      <button id="btnSettings" style="width:auto">⚙️ Ajustes</button>
+      <button id="btnSettings" class="btn btn-ghost btn-icon">⚙️ Ajustes</button>
     </div>
   </header>
 
   <main>
+    <!-- Escáner -->
     <div class="card">
       <h3>Escáner</h3>
       <video id="video" autoplay playsinline></video>
-      <div class="row">
+
+      <div class="grid grid-2" style="margin-top:12px">
         <div>
           <label>Código detectado</label>
           <input id="barcode" class="mono" placeholder="Escanea o escribe manual" />
@@ -49,7 +123,8 @@
           <input id="ticket" class="mono" placeholder="Ej. TCK12345" />
         </div>
       </div>
-      <div class="row">
+
+      <div class="grid grid-2">
         <div>
           <label>ID cliente (opcional)</label>
           <input id="cliente" class="mono" placeholder="Ej. 000123" />
@@ -59,17 +134,20 @@
           <input id="seller" class="mono" placeholder="Ej. S-1" />
         </div>
       </div>
-      <div class="row">
-        <button id="sendBtn">Registrar compra</button>
-        <button id="clearBtn" type="button">Limpiar</button>
+
+      <div class="grid grid-2">
+        <button id="sendBtn" class="btn btn-primary">Registrar compra</button>
+        <button id="clearBtn" type="button" class="btn btn-ghost">Limpiar</button>
       </div>
-      <p class="muted">Consejo: después de detectar un código, el escáner se pausa para evitar lecturas repetidas. Puedes volver a activar con el botón "Limpiar".</p>
+
+      <p class="muted">Después de detectar un código, el escáner se pausa para evitar lecturas repetidas. Vuelve a activar con “Limpiar”.</p>
       <div id="status" class="status"></div>
     </div>
 
-    <div class="card" id="settings" style="display:none">
+    <!-- Ajustes -->
+    <div class="card" id="settings">
       <h3>⚙️ Ajustes</h3>
-      <div class="row">
+      <div class="grid grid-2">
         <div>
           <label>Endpoint (Apps Script Web App URL)</label>
           <input id="endpoint" placeholder="https://script.google.com/macros/s/XXX/exec" />
@@ -79,14 +157,17 @@
           <input id="token" />
         </div>
       </div>
-      <div class="row">
-        <button id="saveSettings">Guardar ajustes</button>
-        <button id="testPing" type="button">Probar conexión</button>
+      <div class="grid grid-2">
+        <button id="saveSettings" class="btn btn-primary">Guardar ajustes</button>
+        <button id="testPing" type="button" class="btn btn-ghost">Probar conexión</button>
       </div>
-      <p class="muted small">Los ajustes se guardan localmente en este dispositivo (localStorage).</p>
+      <p class="muted">Los ajustes se guardan en este dispositivo (localStorage).</p>
     </div>
+
+    <p class="footer-note">© gtzmade.github.io</p>
   </main>
 
+  <!-- Librería ZXing -->
   <script src="https://unpkg.com/@zxing/library@0.20.0"></script>
   <script>
     const $ = (s)=>document.querySelector(s);
@@ -98,56 +179,39 @@
     const endpointEl = $('#endpoint');
     const tokenEl = $('#token');
 
-    // ======= Ajustes por defecto (pon tus valores reales) =======
-    const DEFAULT_ENDPOINT = 'https://script.google.com/macros/s/AKfycbwNmtoZmSMM-8S27qr8E1jCh8wPHdI4UQLS8xl95OqUteQe4t1QvbCwmC9RZbwTanUt/exec'; // <-- REEMPLAZA
-    const DEFAULT_TOKEN    = 'MX-Compras-2025-84xG';                               
-    // ============================================================
+    /* ======= Defaults: cambia por tu endpoint /exec y tu token ======= */
+    const DEFAULT_ENDPOINT = 'https://script.google.com/macros/s/TU_ID/exec'; // <-- REEMPLAZA
+    const DEFAULT_TOKEN    = 'TU_SECRET_TOKEN';                               // <-- REEMPLAZA
+    /* ================================================================= */
 
-    function status(msg, type){
-      statusEl.textContent = msg;
-      statusEl.className = 'status ' + (type || '');
-    }
+    function status(msg, type){ statusEl.textContent = msg; statusEl.className = 'status ' + (type||''); }
 
-    // Normalizador: si es URL, saca ?c=; si no, busca ADM######
+    // Normalizador (URL -> ?c=..., o busca ADM######)
     function extractCode(txt){
       if (!txt) return '';
       txt = String(txt).trim();
-      try {
-        const u = new URL(txt);
-        const c = u.searchParams.get('c');
-        if (c) return c.trim();
-      } catch(e){}
+      try { const u = new URL(txt); const c = u.searchParams.get('c'); if (c) return c.trim(); } catch(e){}
       const m = txt.match(/\bADM\d{6}\b/i);
       if (m) return m[0].toUpperCase();
       return txt;
     }
 
     // Panel Ajustes
-    const btnSettings = $('#btnSettings');
-    const settings = $('#settings');
-    btnSettings.addEventListener('click', ()=>{
-      settings.style.display = settings.style.display === 'none' ? 'block' : 'none';
-    });
+    const btnSettings = $('#btnSettings'), settings = $('#settings');
+    btnSettings.addEventListener('click', ()=>{ settings.style.display = settings.style.display === 'none' ? 'block' : 'none'; });
 
     // Cargar/guardar ajustes con defaults
     function loadSettings(){
       const savedEndpoint = localStorage.getItem('endpoint');
       const savedToken = localStorage.getItem('token');
       const savedSeller = localStorage.getItem('seller');
-
       endpointEl.value = savedEndpoint || DEFAULT_ENDPOINT || '';
       tokenEl.value = savedToken || DEFAULT_TOKEN || '';
       sellerEl.value = savedSeller || '';
     }
     loadSettings();
-
-    // Auto-guardar defaults si no había nada
-    if (!localStorage.getItem('endpoint') && DEFAULT_ENDPOINT) {
-      localStorage.setItem('endpoint', DEFAULT_ENDPOINT);
-    }
-    if (!localStorage.getItem('token') && DEFAULT_TOKEN) {
-      localStorage.setItem('token', DEFAULT_TOKEN);
-    }
+    if (!localStorage.getItem('endpoint') && DEFAULT_ENDPOINT) localStorage.setItem('endpoint', DEFAULT_ENDPOINT);
+    if (!localStorage.getItem('token') && DEFAULT_TOKEN) localStorage.setItem('token', DEFAULT_TOKEN);
 
     $('#saveSettings').addEventListener('click', ()=>{
       localStorage.setItem('endpoint', endpointEl.value.trim());
@@ -156,38 +220,31 @@
       status('Ajustes guardados', 'ok');
     });
 
-    // HTTPS hint
+    // HTTPS badge
     const isSecure = location.protocol === 'https:' || location.hostname === 'localhost';
     $('#secure').textContent = isSecure ? 'Cámara habilitada' : 'Abre con HTTPS o localhost';
 
-    // Prefill desde ?c=
+    // Prefill ?c=
     const prefill = new URLSearchParams(location.search).get('c');
-    if (prefill) {
-      barcodeEl.value = extractCode(prefill);
-      status('Código precargado desde URL', 'ok');
-    }
+    if (prefill){ barcodeEl.value = extractCode(prefill); status('Código precargado desde URL', 'ok'); }
 
     // Normalizar pegados manuales
     barcodeEl.addEventListener('input', ()=>{
-      const val = barcodeEl.value;
-      const normalized = extractCode(val);
-      if (normalized !== val) barcodeEl.value = normalized;
+      const v = barcodeEl.value; const n = extractCode(v); if (n !== v) barcodeEl.value = n;
     });
 
     // Escáner
     const codeReader = new ZXing.BrowserMultiFormatReader();
     let scanning = false, streamRef = null;
-
     async function startScanner(){
       if (scanning) return;
       try{
-        streamRef = await navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' } });
+        streamRef = await navigator.mediaDevices.getUserMedia({ video:{ facingMode:'environment' } });
         $('#video').srcObject = streamRef;
         scanning = true;
         codeReader.decodeFromVideoDevice(null, $('#video'), (result, err) => {
-          if (result) {
-            const txt = (result && result.text || '').trim();
-            const code = extractCode(txt);
+          if (result){
+            const code = extractCode((result.text||'').trim());
             barcodeEl.value = code;
             status('Código detectado', 'ok');
             pauseScanner();
@@ -196,33 +253,19 @@
         });
       }catch(e){ status('No se pudo acceder a la cámara: ' + e, 'err'); }
     }
-
-    async function pauseScanner(){
-      if (!scanning) return;
-      scanning = false;
-      codeReader.reset();
-      if (streamRef) streamRef.getTracks().forEach(t => t.stop());
-    }
+    async function pauseScanner(){ if (!scanning) return; scanning=false; codeReader.reset(); if (streamRef) streamRef.getTracks().forEach(t=>t.stop()); }
     async function resumeScanner(){ await startScanner(); }
     startScanner();
 
-    $('#clearBtn').addEventListener('click', ()=>{
-      barcodeEl.value=''; ticketEl.value='';
-      status('Listo para nuevo escaneo', '');
-      resumeScanner();
-    });
+    $('#clearBtn').addEventListener('click', ()=>{ barcodeEl.value=''; ticketEl.value=''; status('Listo para nuevo escaneo',''); resumeScanner(); });
 
     async function postRecord(payload){
-      const endpoint = (endpointEl.value || '').trim();
-      const token = (tokenEl.value || '').trim();
+      const endpoint = (endpointEl.value||'').trim();
+      const token = (tokenEl.value||'').trim();
       if (!endpoint) throw new Error('Falta endpoint');
       if (!token) throw new Error('Falta token');
       payload.token = token;
-      const res = await fetch(endpoint, {
-        method: 'POST',
-        headers: {'Content-Type':'text/plain;charset=utf-8'},
-        body: JSON.stringify(payload)
-      });
+      const res = await fetch(endpoint, { method:'POST', headers:{'Content-Type':'text/plain;charset=utf-8'}, body:JSON.stringify(payload) });
       return await res.text();
     }
 
@@ -234,35 +277,22 @@
         seller: sellerEl.value.trim(),
         userAgent: navigator.userAgent
       };
-      if (!data.barcode || !data.ticket) {
-        status('Necesitas el código y el ticket', 'err');
-        return;
-      }
+      if (!data.barcode || !data.ticket){ status('Necesitas el código y el ticket','err'); return; }
       try{
         const resp = await postRecord(data);
-        if (resp === 'DUPLICATE') {
-          status('Ticket ya registrado (no se puede repetir).', 'err');
-        } else if (resp === 'UNAUTHORIZED') {
-          status('No autorizado: revisa el token en Ajustes.', 'err');
-        } else if (resp.startsWith('ERROR')) {
-          status(resp, 'err');
-        } else {
-          status('Registrado: ' + resp, 'ok');
-        }
-      }catch(e){
-        status('Error: ' + e.message, 'err');
-      }
+        if (resp === 'DUPLICATE')      status('Ticket ya registrado (no se puede repetir).','err');
+        else if (resp === 'UNAUTHORIZED') status('No autorizado: revisa el token en Ajustes.','err');
+        else if (resp.startsWith('ERROR')) status(resp,'err');
+        else status('Registrado: ' + resp,'ok');
+      }catch(e){ status('Error: ' + e.message,'err'); }
     });
 
     $('#testPing').addEventListener('click', async ()=>{
-      try{
-        const t = await postRecord({barcode:'TEST', ticket:'PING', cliente:'', seller: sellerEl.value.trim(), userAgent: navigator.userAgent});
-        status('Ping OK: ' + t, 'ok');
-      }catch(e){ status('Ping falló: ' + e.message, 'err'); }
+      try{ const t = await postRecord({barcode:'TEST', ticket:'PING', cliente:'', seller: sellerEl.value.trim(), userAgent: navigator.userAgent}); status('Ping OK: ' + t,'ok'); }
+      catch(e){ status('Ping falló: ' + e.message,'err'); }
     });
   </script>
 </body>
 </html>
-
 
 
