--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <div class="wrap">
       <div class="brand">
         <!-- Sube tu logo como logo-valero.png a la raíz del repo -->
-        <img src="logo-valero.png" alt="Logo" onerror="this.style.display='none'">
+        <img src="logo-valero.png" alt="Logo" onerror="this.onerror=null;this.src='logo-valero.jpg'">
         <h1>Registro de compras <span id="secure" class="pill">HTTPS requerido</span></h1>
       </div>
       <button id="btnSettings" class="btn btn-ghost btn-icon">⚙️ Ajustes</button>
