--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>Registro de compras — Escaneo</title>
   <style>
     :root{
-      --brand:#0b5fa5;      /* azul Valero aprox */
+      --brand:#0b5fa5;
       --brand-ink:#0a3560;
-      --accent:#f2c200;     /* amarillo Valero aprox */
+      --accent:#f2c200;
       --bg:#f6f7fb;
       --ink:#0f172a;
       --muted:#64748b;
@@ -26,7 +26,6 @@
       line-height:1.4;
     }
 
-    /* Header */
     header{
       position:sticky; top:0; z-index:10; background:var(--card);
       border-bottom:1px solid var(--line);
@@ -35,22 +34,17 @@
       max-width:960px; margin:0 auto; padding:12px 16px;
       display:flex; align-items:center; justify-content:space-between; gap:12px;
     }
-    .brand{
-      display:flex; align-items:center; gap:12px;
-    }
-    .brand img{
-      height:36px; width:auto; display:block; border-radius:6px;
-    }
+    .brand{display:flex; align-items:center; gap:12px}
+    .brand img{height:36px; width:auto; display:block; border-radius:6px}
     .brand h1{
       margin:0; font-size:18px; font-weight:700; letter-spacing:.2px;
-      color:var(--brand-ink);
-      display:flex; align-items:center; gap:8px;
+      color:var(--brand-ink); display:flex; align-items:center; gap:8px;
     }
     .pill{
       background:#eef2ff;border:1px solid #c7d2fe;color:#3730a3;
       padding:3px 8px;border-radius:999px;font-size:12px;font-weight:600;
     }
-    /* Container & cards */
+
     main{max-width:960px; margin:16px auto; padding:0 16px}
     .card{
       background:var(--card); border:1px solid var(--line); border-radius:var(--radius);
@@ -63,34 +57,17 @@
       border:1px solid #d1d5db; background:white; outline:none;
     }
     input:focus{border-color:var(--brand); box-shadow:0 0 0 3px rgba(11,95,165,.12)}
-    .btn{
-      display:inline-flex; align-items:center; justify-content:center; gap:8px;
-      cursor:pointer; user-select:none; font-weight:700;
-    }
-    .btn-primary{
-      background:var(--brand); color:white; border-color:var(--brand);
-    }
+    .btn{display:inline-flex; align-items:center; justify-content:center; gap:8px; cursor:pointer; user-select:none; font-weight:700}
+    .btn-primary{background:var(--brand); color:white; border-color:var(--brand)}
     .btn-primary:active{transform:translateY(1px)}
-    .btn-ghost{
-      background:white; color:var(--brand-ink); border:1px solid var(--line);
-    }
+    .btn-ghost{background:white; color:var(--brand-ink); border:1px solid var(--line)}
     .btn-icon{width:auto; padding:10px 14px}
     .grid{display:grid; gap:14px}
-    /* 1 columna en móvil, 2 en pantallas medianas */
-    @media (min-width:720px){
-      .grid-2{grid-template-columns:1fr 1fr}
-    }
-
-    /* Video */
-    #video{
-      width:100%; aspect-ratio:16/9; background:#000; border-radius:12px;
-      object-fit:cover; display:block;
-    }
+    @media (min-width:720px){ .grid-2{grid-template-columns:1fr 1fr} }
+    #video{width:100%; aspect-ratio:16/9; background:#000; border-radius:12px; object-fit:cover; display:block}
     .muted{color:var(--muted); font-size:13px}
     .status{margin-top:8px; font-weight:700}
     .status.ok{color:var(--ok)} .status.err{color:var(--err)}
-
-    /* Settings panel */
     #settings{display:none}
     .footer-note{font-size:12px;color:var(--muted); text-align:center; padding:8px 0}
   </style>
@@ -99,7 +76,7 @@
   <header>
     <div class="wrap">
       <div class="brand">
-        <!-- Sube tu logo como logo-valero.png a la raíz del repo -->
+        <!-- PNG por defecto y fallback a JPG -->
         <img src="logo-valero.png" alt="Logo" onerror="this.onerror=null;this.src='logo-valero.jpg'">
         <h1>Registro de compras <span id="secure" class="pill">HTTPS requerido</span></h1>
       </div>
@@ -122,6 +99,15 @@
           <label>Número de ticket</label>
           <input id="ticket" class="mono" placeholder="Ej. TCK12345" />
         </div>
+      </div>
+
+      <!-- NUEVO BLOQUE: LITROS -->
+      <div class="grid grid-2">
+        <div>
+          <label>Litros</label>
+          <input id="litros" type="number" step="0.01" min="0" placeholder="Ej. 42.50" />
+        </div>
+        <div></div>
       </div>
 
       <div class="grid grid-2">
@@ -167,17 +153,17 @@
     <p class="footer-note">© gtzmade.github.io</p>
   </main>
 
-  <!-- Librería ZXing -->
   <script src="https://unpkg.com/@zxing/library@0.20.0"></script>
   <script>
     const $ = (s)=>document.querySelector(s);
     const statusEl = $('#status');
     const barcodeEl = $('#barcode');
-    const ticketEl = $('#ticket');
+    const ticketEl  = $('#ticket');
+    const litrosEl  = $('#litros');   // <-- NUEVO
     const clienteEl = $('#cliente');
-    const sellerEl = $('#seller');
-    const endpointEl = $('#endpoint');
-    const tokenEl = $('#token');
+    const sellerEl  = $('#seller');
+    const endpointEl= $('#endpoint');
+    const tokenEl   = $('#token');
 
     /* ======= Defaults: cambia por tu endpoint /exec y tu token ======= */
     const DEFAULT_ENDPOINT = 'https://script.google.com/macros/s/TU_ID/exec'; // <-- REEMPLAZA
@@ -206,8 +192,8 @@
       const savedToken = localStorage.getItem('token');
       const savedSeller = localStorage.getItem('seller');
       endpointEl.value = savedEndpoint || DEFAULT_ENDPOINT || '';
-      tokenEl.value = savedToken || DEFAULT_TOKEN || '';
-      sellerEl.value = savedSeller || '';
+      tokenEl.value    = savedToken    || DEFAULT_TOKEN    || '';
+      sellerEl.value   = savedSeller   || '';
     }
     loadSettings();
     if (!localStorage.getItem('endpoint') && DEFAULT_ENDPOINT) localStorage.setItem('endpoint', DEFAULT_ENDPOINT);
@@ -257,13 +243,16 @@
     async function resumeScanner(){ await startScanner(); }
     startScanner();
 
-    $('#clearBtn').addEventListener('click', ()=>{ barcodeEl.value=''; ticketEl.value=''; status('Listo para nuevo escaneo',''); resumeScanner(); });
+    $('#clearBtn').addEventListener('click', ()=>{
+      barcodeEl.value=''; ticketEl.value=''; litrosEl.value=''; // <-- limpia litros
+      status('Listo para nuevo escaneo',''); resumeScanner();
+    });
 
     async function postRecord(payload){
       const endpoint = (endpointEl.value||'').trim();
-      const token = (tokenEl.value||'').trim();
+      const token    = (tokenEl.value||'').trim();
       if (!endpoint) throw new Error('Falta endpoint');
-      if (!token) throw new Error('Falta token');
+      if (!token)    throw new Error('Falta token');
       payload.token = token;
       const res = await fetch(endpoint, { method:'POST', headers:{'Content-Type':'text/plain;charset=utf-8'}, body:JSON.stringify(payload) });
       return await res.text();
@@ -272,24 +261,30 @@
     $('#sendBtn').addEventListener('click', async ()=>{
       const data = {
         barcode: extractCode(barcodeEl.value),
-        ticket: ticketEl.value.trim(),
+        ticket:  ticketEl.value.trim(),
+        litros:  litrosEl.value.trim(),    // <-- NUEVO: se envía al backend
         cliente: clienteEl.value.trim(),
-        seller: sellerEl.value.trim(),
+        seller:  sellerEl.value.trim(),
         userAgent: navigator.userAgent
       };
       if (!data.barcode || !data.ticket){ status('Necesitas el código y el ticket','err'); return; }
+      // Si quieres forzar litros, descomenta:
+      // if (!data.litros){ status('Captura los litros.','err'); return; }
+
       try{
         const resp = await postRecord(data);
-        if (resp === 'DUPLICATE')      status('Ticket ya registrado (no se puede repetir).','err');
+        if (resp === 'DUPLICATE')         status('Ticket ya registrado (no se puede repetir).','err');
         else if (resp === 'UNAUTHORIZED') status('No autorizado: revisa el token en Ajustes.','err');
-        else if (resp.startsWith('ERROR')) status(resp,'err');
-        else status('Registrado: ' + resp,'ok');
+        else if (resp.startsWith('ERROR'))status(resp,'err');
+        else                               status('Registrado: ' + resp,'ok');
       }catch(e){ status('Error: ' + e.message,'err'); }
     });
 
     $('#testPing').addEventListener('click', async ()=>{
-      try{ const t = await postRecord({barcode:'TEST', ticket:'PING', cliente:'', seller: sellerEl.value.trim(), userAgent: navigator.userAgent}); status('Ping OK: ' + t,'ok'); }
-      catch(e){ status('Ping falló: ' + e.message,'err'); }
+      try{
+        const t = await postRecord({barcode:'TEST', ticket:'PING', cliente:'', seller: sellerEl.value.trim(), userAgent: navigator.userAgent});
+        status('Ping OK: ' + t,'ok');
+      }catch(e){ status('Ping falló: ' + e.message,'err'); }
     });
   </script>
 </body>
