--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
       <h3>Escáner</h3>
       <video id="video" autoplay playsinline></video>
 
+      <!-- Fila 1: Código + Ticket -->
       <div class="grid grid-2" style="margin-top:12px">
         <div>
           <label>Código detectado</label>
@@ -101,24 +102,25 @@
         </div>
       </div>
 
-      <!-- NUEVO BLOQUE: LITROS -->
+      <!-- Fila 2: Litros + Cliente (Litros va entre Ticket y Cliente) -->
       <div class="grid grid-2">
         <div>
           <label>Litros</label>
           <input id="litros" type="number" step="0.01" min="0" placeholder="Ej. 42.50" />
         </div>
-        <div></div>
-      </div>
-
-      <div class="grid grid-2">
         <div>
           <label>ID cliente (opcional)</label>
           <input id="cliente" class="mono" placeholder="Ej. 000123" />
         </div>
+      </div>
+
+      <!-- Fila 3: Vendedor -->
+      <div class="grid grid-2">
         <div>
           <label>ID vendedor (opcional)</label>
           <input id="seller" class="mono" placeholder="Ej. S-1" />
         </div>
+        <div></div>
       </div>
 
       <div class="grid grid-2">
@@ -159,7 +161,7 @@
     const statusEl = $('#status');
     const barcodeEl = $('#barcode');
     const ticketEl  = $('#ticket');
-    const litrosEl  = $('#litros');   // <-- NUEVO
+    const litrosEl  = $('#litros');   // NUEVO
     const clienteEl = $('#cliente');
     const sellerEl  = $('#seller');
     const endpointEl= $('#endpoint');
@@ -244,7 +246,7 @@
     startScanner();
 
     $('#clearBtn').addEventListener('click', ()=>{
-      barcodeEl.value=''; ticketEl.value=''; litrosEl.value=''; // <-- limpia litros
+      barcodeEl.value=''; ticketEl.value=''; litrosEl.value=''; // limpia litros
       status('Listo para nuevo escaneo',''); resumeScanner();
     });
 
@@ -262,13 +264,13 @@
       const data = {
         barcode: extractCode(barcodeEl.value),
         ticket:  ticketEl.value.trim(),
-        litros:  litrosEl.value.trim(),    // <-- NUEVO: se envía al backend
+        litros:  litrosEl.value.trim(),    // se envía al backend
         cliente: clienteEl.value.trim(),
         seller:  sellerEl.value.trim(),
         userAgent: navigator.userAgent
       };
       if (!data.barcode || !data.ticket){ status('Necesitas el código y el ticket','err'); return; }
-      // Si quieres forzar litros, descomenta:
+      // Si quieres forzar litros:
       // if (!data.litros){ status('Captura los litros.','err'); return; }
 
       try{
