--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
       font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
       line-height:1.4;
     }
-
     header{
       position:sticky; top:0; z-index:10; background:var(--card);
       border-bottom:1px solid var(--line);
@@ -44,7 +43,6 @@
       background:#eef2ff;border:1px solid #c7d2fe;color:#3730a3;
       padding:3px 8px;border-radius:999px;font-size:12px;font-weight:600;
     }
-
     main{max-width:960px; margin:16px auto; padding:0 16px}
     .card{
       background:var(--card); border:1px solid var(--line); border-radius:var(--radius);
@@ -161,7 +159,7 @@
     const statusEl = $('#status');
     const barcodeEl = $('#barcode');
     const ticketEl  = $('#ticket');
-    const litrosEl  = $('#litros');   // NUEVO
+    const litrosEl  = $('#litros');
     const clienteEl = $('#cliente');
     const sellerEl  = $('#seller');
     const endpointEl= $('#endpoint');
@@ -245,9 +243,16 @@
     async function resumeScanner(){ await startScanner(); }
     startScanner();
 
+    // LIMPIAR: borra TODO y reactiva escáner
     $('#clearBtn').addEventListener('click', ()=>{
-      barcodeEl.value=''; ticketEl.value=''; litrosEl.value=''; // limpia litros
-      status('Listo para nuevo escaneo',''); resumeScanner();
+      barcodeEl.value = '';
+      ticketEl.value  = '';
+      litrosEl.value  = '';
+      clienteEl.value = '';   // se limpia también
+      sellerEl.value  = '';   // se limpia también
+      status('Listo para nuevo escaneo','');
+      resumeScanner();
+      barcodeEl.focus();
     });
 
     async function postRecord(payload){
@@ -264,15 +269,12 @@
       const data = {
         barcode: extractCode(barcodeEl.value),
         ticket:  ticketEl.value.trim(),
-        litros:  litrosEl.value.trim(),    // se envía al backend
+        litros:  litrosEl.value.trim(),
         cliente: clienteEl.value.trim(),
         seller:  sellerEl.value.trim(),
         userAgent: navigator.userAgent
       };
       if (!data.barcode || !data.ticket){ status('Necesitas el código y el ticket','err'); return; }
-      // Si quieres forzar litros:
-      // if (!data.litros){ status('Captura los litros.','err'); return; }
-
       try{
         const resp = await postRecord(data);
         if (resp === 'DUPLICATE')         status('Ticket ya registrado (no se puede repetir).','err');
@@ -291,3 +293,5 @@
   </script>
 </body>
 </html>
+
+
